--- a/src/pages/contacts/contacts-add-settings/contacts-add-settings.html
+++ b/src/pages/contacts/contacts-add-settings/contacts-add-settings.html
@@ -12,11 +12,11 @@
 
     <ion-item-group>
 
-      <button ion-item ion-item detail-none>
+      <!--<button ion-item ion-item detail-none>
         <ion-icon name="search" item-start color="dark"></ion-icon>
         <ion-label>Buscar seg&uacute;n nombre de usuario</ion-label>
         <ion-icon item-end name="arrow-forward"></ion-icon>
-      </button>
+      </button>-->
 
 
       <button ion-item detail-none (click)="contactAddByCode()">
@@ -25,11 +25,11 @@
         <ion-icon item-end name="arrow-forward"></ion-icon>
       </button>
 
-      <button ion-item detail-none>
+      <!--<button ion-item detail-none>
         <ion-icon name="contacts" item-start color="dark"></ion-icon>
         <ion-label>Buscar entre mis contactos</ion-label>
         <ion-icon item-end name="arrow-forward"></ion-icon>
-      </button>
+      </button>-->
 
     </ion-item-group>
 
